maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:49: error: forward reference extends over definition of variable gau
  if ( estFaceMur() && isDirectionFree2(Direction.OUEST) && !gau ){
                                                             ^